[workspace.package]
authors = ["blockchain labs"]
edition = "2021"
homepage = "https://infrablockchain.net/en"
repository = "https://github.com/InfraBlockchain/infrablockchain-substrate"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"bridges/modules/xcm-bridge-hub-router",
	"bridges/primitives/chain-asset-hub-kusama",
	"bridges/primitives/chain-asset-hub-polkadot",
	"bridges/primitives/chain-bridge-hub-cumulus",
	"bridges/primitives/chain-bridge-hub-kusama",
	"bridges/primitives/chain-bridge-hub-polkadot",
	"bridges/primitives/chain-bridge-hub-rococo",
	"bridges/primitives/chain-bridge-hub-wococo",
	"bridges/primitives/chain-kusama",
	"bridges/primitives/chain-polkadot",
	"bridges/primitives/chain-polkadot-bulletin",
	"bridges/primitives/chain-rococo",
	"bridges/primitives/chain-wococo",
	"bridges/primitives/header-chain",
	"bridges/primitives/messages",
	"bridges/primitives/parachains",
	"bridges/primitives/polkadot-core",
	"bridges/primitives/relayers",
	"bridges/primitives/runtime",
	"bridges/primitives/test-utils",
	"bridges/primitives/xcm-bridge-hub-router",
	"cumulus/client/cli",
	"cumulus/client/collator",
	"cumulus/client/consensus/aura",
	"cumulus/client/consensus/common",
	"cumulus/client/consensus/proposer",
	"cumulus/client/consensus/relay-chain",
	"cumulus/client/network",
	"cumulus/client/pov-recovery",
	"cumulus/client/relay-chain-inprocess-interface",
	"cumulus/client/relay-chain-interface",
	"cumulus/client/relay-chain-minimal-node",
	"cumulus/client/relay-chain-rpc-interface",
	"cumulus/client/service",
	"cumulus/pallets/aura-ext",
	"cumulus/pallets/collator-selection",
	"cumulus/pallets/dmp-queue",
	"cumulus/pallets/parachain-system",
	"cumulus/pallets/parachain-system/proc-macro",
	"cumulus/pallets/session-benchmarking",
	"cumulus/pallets/solo-to-para",
	"cumulus/pallets/xcm",
	"cumulus/pallets/xcmp-queue",
	"cumulus/pallets/infra-parachain-core",
	"cumulus/parachain-template/node",
	"cumulus/parachain-template/pallets/template",
	"cumulus/parachain-template/runtime",
	"cumulus/parachains/common",
	"cumulus/parachains/pallets/parachain-info",
	"cumulus/parachains/pallets/ping",
	"cumulus/parachains/runtimes/assets/asset-hub-infra",
	"cumulus/parachains/runtimes/assets/common",
	"cumulus/parachains/runtimes/assets/test-utils",
	"cumulus/parachains/runtimes/newnal",
	"cumulus/parachains/runtimes/contracts/contracts-infra",
	"cumulus/parachains/runtimes/did",
	"cumulus/infra-parachain",
	"cumulus/infra-assethub-parachain",
	"cumulus/primitives/aura",
	"cumulus/primitives/core",
	"cumulus/primitives/parachain-inherent",
	"cumulus/primitives/timestamp",
	"cumulus/primitives/utility",
	"cumulus/test/client",
	"cumulus/test/relay-sproof-builder",
	"cumulus/test/runtime",
	"cumulus/test/service",
	"cumulus/xcm/xcm-emulator",
	"infrablockchain",
	"infrablockchain/cli",
	"infrablockchain/core-primitives",
	"infrablockchain/erasure-coding",
	"infrablockchain/erasure-coding/fuzzer",
	"infrablockchain/node/collation-generation",
	"infrablockchain/node/core/approval-voting",
	"infrablockchain/node/core/av-store",
	"infrablockchain/node/core/backing",
	"infrablockchain/node/core/bitfield-signing",
	"infrablockchain/node/core/candidate-validation",
	"infrablockchain/node/core/chain-api",
	"infrablockchain/node/core/chain-selection",
	"infrablockchain/node/core/dispute-coordinator",
	"infrablockchain/node/core/parachains-inherent",
	"infrablockchain/node/core/prospective-parachains",
	"infrablockchain/node/core/provisioner",
	"infrablockchain/node/core/pvf-checker",
	"infrablockchain/node/core/pvf",
	"infrablockchain/node/core/pvf/common",
	"infrablockchain/node/core/pvf/execute-worker",
	"infrablockchain/node/core/pvf/prepare-worker",
	"infrablockchain/node/core/runtime-api",
	"infrablockchain/node/gum",
	"infrablockchain/node/gum/proc-macro",
	"infrablockchain/node/jaeger",
	"infrablockchain/node/malus",
	"infrablockchain/node/metrics",
	"infrablockchain/node/network/approval-distribution",
	"infrablockchain/node/network/availability-distribution",
	"infrablockchain/node/network/availability-recovery",
	"infrablockchain/node/network/bitfield-distribution",
	"infrablockchain/node/network/bridge",
	"infrablockchain/node/network/collator-protocol",
	"infrablockchain/node/network/dispute-distribution",
	"infrablockchain/node/network/gossip-support",
	"infrablockchain/node/network/protocol",
	"infrablockchain/node/network/statement-distribution",
	"infrablockchain/node/overseer",
	"infrablockchain/node/primitives",
	"infrablockchain/node/service",
	"infrablockchain/node/subsystem-test-helpers",
	"infrablockchain/node/subsystem-types",
	"infrablockchain/node/subsystem-util",
	"infrablockchain/node/subsystem",
	"infrablockchain/node/test/client",
	"infrablockchain/node/test/service",
	"infrablockchain/node/zombienet-backchannel",
	"infrablockchain/parachain",
	"infrablockchain/parachain/test-parachains",
	"infrablockchain/parachain/test-parachains/adder",
	"infrablockchain/parachain/test-parachains/adder/collator",
	"infrablockchain/parachain/test-parachains/halt",
	"infrablockchain/parachain/test-parachains/undying",
	"infrablockchain/parachain/test-parachains/undying/collator",
	"infrablockchain/primitives",
	"infrablockchain/primitives/test-helpers",
	"infrablockchain/rpc",
	"infrablockchain/runtime/common",
	"infrablockchain/runtime/common/slot_range_helper",
	"infrablockchain/runtime/metrics",
	"infrablockchain/runtime/parachains",
	"infrablockchain/runtime/test-runtime",
	"infrablockchain/runtime/test-runtime/constants",
	"infrablockchain/runtime/infra-relay",
	"infrablockchain/runtime/infra-relay/constants",
	"infrablockchain/statement-table",
	"infrablockchain/utils/generate-bags",
	"infrablockchain/utils/remote-ext-tests/bags-list",
	"infrablockchain/xcm",
	"infrablockchain/xcm/pallet-xcm-benchmarks",
	"infrablockchain/xcm/pallet-xcm",
	"infrablockchain/xcm/xcm-primitives",
	"infrablockchain/xcm/infra-asset-link",
	"infrablockchain/xcm/infra-asset-common",
	"infrablockchain/xcm/procedural",
	"infrablockchain/xcm/xcm-builder",
	"infrablockchain/xcm/xcm-executor",
	"infrablockchain/xcm/xcm-executor/integration-tests",
	"infrablockchain/xcm/xcm-simulator",
	"infrablockchain/xcm/xcm-simulator/example",
	"infrablockchain/xcm/xcm-simulator/fuzzer",
	"substrate",
	"substrate/bin/node-template/node",
	"substrate/bin/node-template/pallets/template",
	"substrate/bin/node-template/runtime",
	"substrate/bin/node/bench",
	"substrate/bin/node/cli",
	"substrate/bin/node/executor",
	"substrate/bin/node/inspect",
	"substrate/bin/node/primitives",
	"substrate/bin/node/rpc",
	"substrate/bin/node/runtime",
	"substrate/bin/node/testing",
	"substrate/bin/utils/chain-spec-builder",
	"substrate/bin/utils/subkey",
	"substrate/client/allocator",
	"substrate/client/api",
	"substrate/client/authority-discovery",
	"substrate/client/basic-authorship",
	"substrate/client/block-builder",
	"substrate/client/chain-spec",
	"substrate/client/chain-spec/derive",
	"substrate/client/cli",
	"substrate/client/consensus/aura",
	"substrate/client/consensus/babe",
	"substrate/client/consensus/babe/rpc",
	"substrate/client/consensus/beefy",
	"substrate/client/consensus/beefy/rpc",
	"substrate/client/consensus/common",
	"substrate/client/consensus/epochs",
	"substrate/client/consensus/grandpa",
	"substrate/client/consensus/grandpa/rpc",
	"substrate/client/consensus/manual-seal",
	"substrate/client/consensus/pow",
	"substrate/client/consensus/slots",
	"substrate/client/db",
	"substrate/client/executor",
	"substrate/client/executor/common",
	"substrate/client/executor/runtime-test",
	"substrate/client/executor/wasmtime",
	"substrate/client/informant",
	"substrate/client/keystore",
	"substrate/client/merkle-mountain-range",
	"substrate/client/merkle-mountain-range/rpc",
	"substrate/client/mixnet",
	"substrate/client/network-gossip",
	"substrate/client/network",
	"substrate/client/network/bitswap",
	"substrate/client/network/common",
	"substrate/client/network/light",
	"substrate/client/network/statement",
	"substrate/client/network/sync",
	"substrate/client/network/test",
	"substrate/client/network/transactions",
	"substrate/client/offchain",
	"substrate/client/proposer-metrics",
	"substrate/client/rpc-api",
	"substrate/client/rpc-servers",
	"substrate/client/rpc-spec-v2",
	"substrate/client/rpc",
	"substrate/client/service",
	"substrate/client/service/test",
	"substrate/client/state-db",
	"substrate/client/statement-store",
	"substrate/client/storage-monitor",
	"substrate/client/sync-state-rpc",
	"substrate/client/sysinfo",
	"substrate/client/telemetry",
	"substrate/client/tracing",
	"substrate/client/tracing/proc-macro",
	"substrate/client/transaction-pool",
	"substrate/client/transaction-pool/api",
	"substrate/client/utils",
	"substrate/frame/alliance",
	"substrate/frame/asset-conversion",
	"substrate/frame/asset-rate",
	"substrate/frame/assets",
	"substrate/frame/atomic-swap",
	"substrate/frame/aura",
	"substrate/frame/authority-discovery",
	"substrate/frame/authorship",
	"substrate/frame/babe",
	"substrate/frame/bags-list",
	"substrate/frame/bags-list/fuzzer",
	"substrate/frame/bags-list/remote-tests",
	"substrate/frame/balances",
	"substrate/frame/beefy-mmr",
	"substrate/frame/beefy",
	"substrate/frame/benchmarking",
	"substrate/frame/benchmarking/pov",
	"substrate/frame/bounties",
	"substrate/frame/broker",
	"substrate/frame/child-bounties",
	"substrate/frame/collective",
	"substrate/frame/contracts",
	"substrate/frame/contracts/primitives",
	"substrate/frame/contracts/proc-macro",
	"substrate/frame/conviction-voting",
	"substrate/frame/core-fellowship",
	"substrate/frame/data-market",
	"substrate/frame/democracy",
	"substrate/frame/election-provider-multi-phase",
	"substrate/frame/election-provider-multi-phase/test-staking-e2e",
	"substrate/frame/election-provider-support",
	"substrate/frame/election-provider-support/benchmarking",
	"substrate/frame/election-provider-support/solution-type",
	"substrate/frame/election-provider-support/solution-type/fuzzer",
	"substrate/frame/elections-phragmen",
	"substrate/frame/examples",
	"substrate/frame/examples/basic",
	"substrate/frame/examples/default-config",
	"substrate/frame/examples/dev-mode",
	"substrate/frame/examples/kitchensink",
	"substrate/frame/examples/offchain-worker",
	"substrate/frame/examples/split",
	"substrate/frame/executive",
	"substrate/frame/fast-unstake",
	"substrate/frame/glutton",
	"substrate/frame/grandpa",
	"substrate/frame/identity",
	"substrate/frame/im-online",
	"substrate/frame/indices",
	"substrate/frame/insecure-randomness-collective-flip",
	"substrate/frame/lottery",
	"substrate/frame/membership",
	"substrate/frame/merkle-mountain-range",
	"substrate/frame/message-queue",
	"substrate/frame/mixnet",
	"substrate/frame/multisig",
	"substrate/frame/nft-fractionalization",
	"substrate/frame/nfts",
	"substrate/frame/nfts/runtime-api",
	"substrate/frame/nicks",
	"substrate/frame/nis",
	"substrate/frame/node-authorization",
	"substrate/frame/nomination-pools",
	"substrate/frame/nomination-pools/benchmarking",
	"substrate/frame/nomination-pools/fuzzer",
	"substrate/frame/nomination-pools/runtime-api",
	"substrate/frame/nomination-pools/test-staking",
	"substrate/frame/offences",
	"substrate/frame/offences/benchmarking",
	"substrate/frame/paged-list",
	"substrate/frame/paged-list/fuzzer",
	"substrate/frame/preimage",
	"substrate/frame/proxy",
	"substrate/frame/ranked-collective",
	"substrate/frame/recovery",
	"substrate/frame/referenda",
	"substrate/frame/remark",
	"substrate/frame/root-offences",
	"substrate/frame/root-testing",
	"substrate/frame/safe-mode",
	"substrate/frame/salary",
	"substrate/frame/scheduler",
	"substrate/frame/scored-pool",
	"substrate/frame/session",
	"substrate/frame/session/benchmarking",
	"substrate/frame/society",
	"substrate/frame/staking",
	"substrate/frame/staking/reward-curve",
	"substrate/frame/staking/reward-fn",
	"substrate/frame/staking/runtime-api",
	"substrate/frame/state-trie-migration",
	"substrate/frame/statement",
	"substrate/frame/sudo",
	"substrate/frame/support",
	"substrate/frame/support/procedural",
	"substrate/frame/support/procedural/tools",
	"substrate/frame/support/procedural/tools/derive",
	"substrate/frame/support/test",
	"substrate/frame/support/test/compile_pass",
	"substrate/frame/support/test/pallet",
	"substrate/frame/system",
	"substrate/frame/oracle",
	"substrate/frame/system/benchmarking",
	"substrate/frame/system/rpc/runtime-api",
	"substrate/frame/timestamp",
	"substrate/frame/tips",
	"substrate/frame/transaction-payment",
	"substrate/frame/transaction-payment/asset-conversion-tx-payment",
	"substrate/frame/transaction-payment/asset-tx-payment",
	"substrate/frame/transaction-payment/system-token-tx-payment",
	"substrate/frame/transaction-payment/rpc",
	"substrate/frame/transaction-payment/rpc/runtime-api",
	"substrate/frame/transaction-storage",
	"substrate/frame/treasury",
	"substrate/frame/try-runtime",
	"substrate/frame/tx-pause",
	"substrate/frame/uniques",
	"substrate/frame/utility",
	"substrate/frame/vesting",
	"substrate/frame/validator-election",
	"substrate/frame/whitelist",
	"substrate/primitives/api",
	"substrate/primitives/api/proc-macro",
	"substrate/primitives/api/test",
	"substrate/primitives/application-crypto",
	"substrate/primitives/application-crypto/test",
	"substrate/primitives/arithmetic",
	"substrate/primitives/arithmetic/fuzzer",
	"substrate/primitives/authority-discovery",
	"substrate/primitives/block-builder",
	"substrate/primitives/blockchain",
	"substrate/primitives/consensus/aura",
	"substrate/primitives/consensus/babe",
	"substrate/primitives/consensus/beefy",
	"substrate/primitives/consensus/common",
	"substrate/primitives/consensus/grandpa",
	"substrate/primitives/consensus/pow",
	"substrate/primitives/consensus/sassafras",
	"substrate/primitives/consensus/slots",
	"substrate/primitives/core",
	"substrate/primitives/core/hashing",
	"substrate/primitives/core/hashing/proc-macro",
	"substrate/primitives/crypto/ec-utils",
	"substrate/primitives/database",
	"substrate/primitives/debug-derive",
	"substrate/primitives/externalities",
	"substrate/primitives/genesis-builder",
	"substrate/primitives/inherents",
	"substrate/primitives/io",
	"substrate/primitives/keyring",
	"substrate/primitives/keystore",
	"substrate/primitives/maybe-compressed-blob",
	"substrate/primitives/merkle-mountain-range",
	"substrate/primitives/metadata-ir",
	"substrate/primitives/mixnet",
	"substrate/primitives/npos-elections",
	"substrate/primitives/npos-elections/fuzzer",
	"substrate/primitives/offchain",
	"substrate/primitives/panic-handler",
	"substrate/primitives/rpc",
	"substrate/primitives/runtime-interface",
	"substrate/primitives/runtime-interface/proc-macro",
	"substrate/primitives/runtime-interface/test-wasm-deprecated",
	"substrate/primitives/runtime-interface/test-wasm",
	"substrate/primitives/runtime-interface/test",
	"substrate/primitives/runtime",
	"substrate/primitives/session",
	"substrate/primitives/staking",
	"substrate/primitives/state-machine",
	"substrate/primitives/statement-store",
	"substrate/primitives/softfloat",
	"substrate/primitives/std",
	"substrate/primitives/storage",
	"substrate/primitives/test-primitives",
	"substrate/primitives/timestamp",
	"substrate/primitives/tracing",
	"substrate/primitives/transaction-pool",
	"substrate/primitives/transaction-storage-proof",
	"substrate/primitives/trie",
	"substrate/primitives/version",
	"substrate/primitives/version/proc-macro",
	"substrate/primitives/wasm-interface",
	"substrate/primitives/weights",
	"substrate/scripts/ci/node-template-release",
	"substrate/test-utils",
	"substrate/test-utils/cli",
	"substrate/test-utils/client",
	"substrate/test-utils/runtime",
	"substrate/test-utils/runtime/client",
	"substrate/test-utils/runtime/transaction-pool",
	"substrate/utils/binary-merkle-tree",
	"substrate/utils/build-script-utils",
	"substrate/utils/fork-tree",
	"substrate/utils/frame/benchmarking-cli",
	"substrate/utils/frame/frame-utilities-cli",
	"substrate/utils/frame/generate-bags",
	"substrate/utils/frame/generate-bags/node-runtime",
	"substrate/utils/frame/remote-externalities",
	"substrate/utils/frame/rpc/client",
	"substrate/utils/frame/rpc/state-trie-migration-rpc",
	"substrate/utils/frame/rpc/support",
	"substrate/utils/frame/rpc/system",
	"substrate/utils/frame/try-runtime/cli",
	"substrate/utils/prometheus",
	"substrate/utils/wasm-builder",
]
# default-members = ["infrablockchain", "cumulus/infra-assethub-parachain", "cumulus/infra-parachain"]
default-members = ["infrablockchain"]

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true


# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
