[[bin]]
name = "infrablockchain"
path = "src/main.rs"

[[bin]]
name = "infrablockchain-execute-worker"
path = "src/bin/execute-worker.rs"

[[bin]]
name = "infrablockchain-prepare-worker"
path = "src/bin/prepare-worker.rs"

[package]
name = "infrablockchain"
description = "Implementation of Enterprise Public Blockchain based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0"
readme = "README.md"
authors.workspace = true
edition.workspace = true
version = "1.1.0"
default-run = "infrablockchain"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = { version = "0.5.0", optional = true }

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
infrablockchain-cli = { path = "cli", features = ["rococo-native", "infra-relay-native" ]  }
node-core-pvf = { path = "node/core/pvf" }
node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
infrablockchain-overseer = { path = "node/overseer" }

# Needed for worker binaries.
node-core-pvf-common = { path = "node/core/pvf/common" }
node-core-pvf-execute-worker = { path = "node/core/pvf/execute-worker" }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { path = "../substrate/utils/frame/rpc/client/" }
infrablockchain-core-primitives = { path = "core-primitives" }

[build-dependencies]
substrate-build-script-utils = { path = "../substrate/utils/build-script-utils" }

[badges]
maintenance = { status = "actively-developed" }

[features]
runtime-benchmarks = [ "infrablockchain-cli/runtime-benchmarks" ]
try-runtime = [ "infrablockchain-cli/try-runtime" ]
fast-runtime = [ "infrablockchain-cli/fast-runtime" ]
runtime-metrics = [ "infrablockchain-cli/runtime-metrics" ]
pyroscope = [ "infrablockchain-cli/pyroscope" ]
jemalloc-allocator = [
	"dep:tikv-jemallocator",
	"node-core-pvf-prepare-worker/jemalloc-allocator",
	"node-core-pvf/jemalloc-allocator",
	"infrablockchain-overseer/jemalloc-allocator",
]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = [ "node-core-pvf/ci-only-tests" ]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of Enterprise Public Blockchain based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	[
		"target/release/infrablockchain",
		"/usr/bin/",
		"755",
	],
	[
		"target/release/infrablockchain-prepare-worker",
		"/usr/lib/polkadot/",
		"755"
	],
	[
		"target/release/infrablockchain-execute-worker",
		"/usr/lib/polkadot/",
		"755"
	],
	[
		"scripts/packaging/polkadot.service",
		"/lib/systemd/system/",
		"644",
	],
]
conf-files = ["/etc/default/polkadot"]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
